--- a/app/app/views/users/new.html.erb
+++ b/app/app/views/users/new.html.erb
@@ -17,6 +17,11 @@
 </div>
 
 <div class= "field">
+<%= f.label :summary %>
+<%= f.text_field :summary %>
+</div>
+
+<div class= "field">
 <%= f.label :email %>
 <%= f.text_field :email %>
 </div>
