--- a/app/app/views/users/edit.html.erb
+++ b/app/app/views/users/edit.html.erb
@@ -24,8 +24,8 @@
 </div>
 
 <div class= "field">
-<%= f.label :email %>
-<%= f.text_field :email %>
+<%= f.label :summary %>
+<%= f.text_field :summary %>
 </div>
 
 <div class= "field">
