--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -8,7 +8,16 @@
 </head>
 <body>
 
-<%= yield %>
+	<% if current_user %>
 
+		<p><%= current_user.email %> | <%= link_to 'sign out', sessions_path, method: :delete %></p>
+
+	<% end %>
+
+
+
+	<%= yield %>
+
+	
 </body>
 </html>
