--- a/app/app/views/users/index.html.erb
+++ b/app/app/views/users/index.html.erb
@@ -1,8 +1,10 @@
-<h1>Users index</h1>
-<% @users.each do |user| %>
-	<%= user.email %>
-	<%= user.password_digest %>
-<% end %>
+<h1>User index</h1>
+<% @users.each do |user| %>	
+	<li><%= user.name %> | <%= user.email %></li>
+<% end %>	
 
-<%= link_to 'sign in', %>
+
+<%= link_to 'posts', new_session_path, method: :get %>
+
+<%= link_to 'sign out', new_session_path, method: :get %>
 
