--- a/app/app/views/posts/index.html.erb
+++ b/app/app/views/posts/index.html.erb
@@ -2,15 +2,24 @@
 <h1>Posts</h1>
 
 <p><%= link_to "New Post", new_post_path %></p>
-
+<%= current_user.following.count %> <%= current_user.followers.count %>
 <% @posts.each do |post| %>
 
 	<p><%= post.title %></p>
 	<p>By: <%= post.user.name %></p>
+	 <%= if post.user.id != current_user.id
+
+			if following?(post.user) 
+			 	# render 'users/unfollow' 
+			 	 link_to "Unfollow", "/users/#{post.user.id}/unfollow" 
+		 	else 
+		 		# render 'users/follow' 
+		 		link_to "Follow", "/users/#{post.user.id}/follow" 
+			end 
+		end
+	%>
 	<%= image_tag post.url %>
 	
 	<p><%= post.body %></p>
-
-
 <% end %>
 
