--- a/app/app/views/users/edit.html.erb
+++ b/app/app/views/users/edit.html.erb
@@ -1,44 +1,6 @@
 
-<h1>Update your profile</h1>
+<h1>Change Password</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
-
-<%= form_for @user do |f| %>
-	<% if @user.errors.any? %>
-	<div class="error_messages">
-	<h2>Form is invalid</h2>
-	<ul>
-	<% for message in @user.errors.full_messages %>
-	<li><%= message %></li>
-	<% end %>
-	</ul>
-	</div>
-<% end %>
-
-<div class= "field">
-<%= f.label :name %>
-<%= f.text_field :name %>
-</div>
-
-<div class= "field">
-<%= f.label :summary %>
-<%= f.text_field :summary %>
-</div>
-
-<div class= "field">
-<%= f.label :password %>
-<%= f.password_field :password %>
-</div>
-
-<div class= "field">
-<%= f.label :password_confirmation %>
-<%= f.password_field :password_confirmation %>
-</div>
-
-<div class= "actions">
-	<%= f.submit %>
-</div>
-<% end %>
