--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>App</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<% if current_user %>
+    <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
 
-		<p><%= current_user.email %> | <%= link_to 'sign out', sessions_path, method: :delete %></p>
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "vendor/modernizr" %>
+    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
 
-	<% end %>
+  <body>
+  <h1>Gallery</h1>
+    <%= yield %>
 
-
-
-	<%= yield %>
-
-	
-</body>
+  </body>
 </html>
