--- a/app/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/app/assets/stylesheets/foundation_and_overrides.scss
@@ -80,7 +80,7 @@ $include-html-global-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
 // $row-width: rem-calc(1000);
-// $total-columns: 12;
+$total-columns: 12;
 // $column-gutter: rem-calc(30);
 
 // c. Global
@@ -94,7 +94,6 @@ $include-html-global-classes: $include-html-classes;
 // We use these to define default font weights
 // $font-weight-normal: normal;
 // $font-weight-bold: bold;
-
 // $white       : #FFFFFF;
 // $ghost       : #FAFAFA;
 // $snow        : #F9F9F9;
@@ -140,7 +139,7 @@ $include-html-global-classes: $include-html-classes;
 // $last-child-float: $opposite-direction;
 
 // We use these to make sure border radius matches unless we want it different.
-// $global-radius: 3px;
+ $global-radius: 3px;
 // $global-rounded: 1000px;
 
 // We use these to control inset shadow shiny edges and depressions.
@@ -640,7 +639,7 @@ $include-html-global-classes: $include-html-classes;
 
 // We use these to style the labels in different ways
 // $form-label-pointer: pointer;
-// $form-label-font-size: rem-calc(14);
+$form-label-font-size: rem-calc(14);
 // $form-label-font-weight: $font-weight-normal;
 // $form-label-line-height: 1.5;
 // $form-label-font-color: scale-color($black, $lightness: 30%);
