--- a/app/app/assets/stylesheets/application.css
+++ b/app/app/assets/stylesheets/application.css
@@ -19,20 +19,32 @@
 @import url(https://fonts.googleapis.com/css?family=Bitter:400,700);
 
 body {
- background-color: #CBF5F4;
+ background: linear-gradient(to right, #c9ffbf, #ffafbd);
  text-align: center;
-font-family: 'PT Sans', sans-serif;
+ font-family: 'PT Sans', sans-serif;
+ color: #444444;
+
 }
 
 h1 {
 	font-family: 'Bitter', serif;
-	font-size: 200px;
+	font-size: 100px;
+	color: white;
+	text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+}
+
+h3 {
+	font-family: 'Bitter', serif;
+	color: white;
+	text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
 }
 
 div {
-	background-color: white;
+	background: rgba(255,255,255,0.5); 
 }
 
-@media
+.actions {
+	background-color: red;
+}
 
 
