--- a/app/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1475,7 +1475,7 @@ $form-label-font-size: rem-calc(14);
 // $topbar-divider-border-top: solid 1px scale-color($topbar-bg-color, $lightness: -50%);
 
 // Sticky Class
-// $topbar-sticky-class: ".sticky";
+$topbar-sticky-class: ".sticky";
 // $topbar-arrows: true; //Set false to remove the triangle icon from the menu item
 // $topbar-dropdown-arrows: true; //Set false to remove the \00bb >> text from dropdown subnavigation li//
 
