--- a/app/app/views/users/edit.html.erb
+++ b/app/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 
-<h1>Change Password</h1>
+<h3>Change Password</h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', posts_path %>
